# GPUMemManSurvey

./: .gitignore  .gitmodules  BaseCMake.cmake  CMakeLists.txt  Notes.md  README.md  SetupScript.py  SetupScript.sh  Tests.md  clean.py  cleanAll.py  init.py  setup.py  setupAll.py  testAll.py
frameworks/cuda/: CMakeLists.txt  Instance.cuh  main.cu
frameworks/dynasoar/: CMakeLists.txt  Instance.cuh  main.cu
frameworks/fdg/: CMakeLists.txt  FDGMalloc_impl.cuh  Instance.cuh  main.cu
frameworks/fdg/header/: Warp.cuh  defines.cuh
frameworks/fdg/src/: List_impl.cuh  SuperBlock_impl.cuh  Warp.cu  Warp_impl.cuh
frameworks/halloc/: CMakeLists.txt  Instance.cuh  main.cu
frameworks/halloc/fixes/: globals.cuh  grid.cuh  halloc.cuh  size-info.cuh  size-info.h  slab.cuh  utils.cuh  utils.h
frameworks/ouroboros/: CMakeLists.txt  Instance.cuh  main.cu
frameworks/regeff/: CMakeLists.txt  Instance.cuh  gpualloc.cuh  gpualloc_impl.cuh  main.cu  warp_common_impl.cuh
frameworks/scatteralloc/: CMakeLists.txt  Instance.cuh  main.cu
frameworks/scatteralloc/repository_simple/: heap.cuh  heap_impl.cuh  utils.cuh
tests/alloc_tests/: CMakeLists.txt  clean.py  perf_allocation.cu  perf_mixed_allocation.cu  setup.py  test_allocation.py  test_mixed_allocation.py  test_scaling.py
tests/alloc_tests/results/: Apr-29-2020_13-15-56_perf_alloc_10000.csv  Apr-29-2020_13-15-56_perf_free_10000.csv  perf_alloc_Ouroboros-P-VA_100000_4-8192.csv  perf_alloc_Ouroboros-P-VL_10000_4-8192.csv  perf_alloc_ScatterAlloc_10000_4-8192.csv  perf_alloc_XMalloc_10000_4-8192.csv  perf_free_CUDA_100000_4-8192.csv  perf_free_CUDA_10000_4-8192.csv  perf_free_Ouroboros-P-S_100000_4-8192.csv  perf_free_Ouroboros-P-S_10000_4-8192.csv  perf_free_ScatterAlloc_100000_4-8192.csv  perf_free_ScatterAlloc_10000_4-8192.csv  perf_free_XMalloc_10000_4-8192.csv
tests/alloc_tests/results/mixed_performance/: perf_mixed_alloc_CUDA_10000_4-8192.csv  perf_mixed_alloc_Halloc_100000_4-8192.csv  (+43 more)
tests/frag_tests/: CMakeLists.txt  frag_memory_overhead.cu  test_fragmentation.py  test_oom.py
tests/frag_tests/results/: frag_CUDA_100000_4-256.csv  frag_CUDA_100000_4-8192.csv  frag_Halloc_100000_4-256.csv  frag_Halloc_100000_4-5000.csv  frag_Ouroboros-C-S_100000_4-8192.csv  frag_Ouroboros-C-VA_100000_4-8192.csv  frag_Ouroboros-P-S_100000_4-8192.csv  frag_Ouroboros-P-VA_100000_4-8192.csv  frag_Ouroboros-P-VL_100000_4-8192.csv  frag_RegEff-CFM_100000_4-2460.csv  frag_RegEff-C_100000_4-8192.csv  frag_ScatterAlloc_100000_2312-8192.csv  frag_ScatterAlloc_100000_4-2048.csv  frag_ScatterAlloc_100000_4-2308.csv  frag_ScatterAlloc_100000_4-256.csv  frag_ScatterAlloc_100000_4-4300.csv  frag_XMalloc_100000_4-8192.csv  oom_Halloc_100000_4-8192.csv  oom_Ouroboros-P-S_100000_4-8192.csv  oom_RegEff-AW_100000_4-8192.csv  oom_RegEff-CF_100000_4-8192.csv  oom_RegEff-CM_100000_4-128.csv  oom_RegEff-CM_100000_4-16.csv  oom_RegEff-CM_100000_4-8192.csv  oom_RegEff-C_100000_4-8192.csv  oom_XMalloc_100000_4-8192.csv
tests/graph_tests/: CMakeLists.txt  config.json  config_init.json  config_update.json  config_update_range.json  graph_test.cu  test_graph_init.py  test_graph_update.py  test_graphs.py
tests/graph_tests/data/: email.mtx
tests/graph_tests/include/: Definitions.h  EdgeUpdate.h  MemoryLayout.h  PerformanceMeasure.cuh  Verification.h
tests/graph_tests/results/: graph_init_CUDA.csv  graph_init_CUDA_01.csv  graph_init_Halloc.csv  graph_init_Ouroboros-C-S.csv  graph_init_Ouroboros-C-VL.csv  graph_init_Ouroboros-P-S.csv  graph_init_Ouroboros-P-VA.csv  graph_init_Ouroboros-P-VL.csv  graph_init_RegEff-A.csv  graph_init_RegEff-AW.csv  graph_init_RegEff-C.csv  graph_init_RegEff-CF.csv  graph_init_RegEff-CFM.csv  graph_init_RegEff-CM.csv  graph_init_ScatterAlloc.csv  graph_stats.csv  graph_update_CUDA_delete.csv  graph_update_CUDA_delete_range.csv  graph_update_Halloc_delete.csv  graph_update_Halloc_delete_range.csv  graph_update_Ouroboros-C-S_insert.csv  graph_update_Ouroboros-C-VA_delete_range.csv  graph_update_Ouroboros-C-VA_insert_range.csv  graph_update_Ouroboros-C-VL_delete.csv  graph_update_Ouroboros-C-VL_delete_range.csv  graph_update_Ouroboros-C-VL_insert.csv  graph_update_Ouroboros-C-VL_insert_range.csv  graph_update_Ouroboros-P-S_delete_range.csv  graph_update_Ouroboros-P-VA_delete.csv  graph_update_Ouroboros-P-VA_delete_range.csv  graph_update_Ouroboros-P-VA_insert.csv  graph_update_Ouroboros-P-VL_delete_range.csv  graph_update_Ouroboros-P-VL_insert.csv  graph_update_RegEff-AW_insert_range.csv  graph_update_RegEff-CF_delete.csv  graph_update_RegEff-CM_delete.csv  graph_update_RegEff-CM_delete_range.csv  graph_update_RegEff-CM_insert.csv  graph_update_RegEff-CM_insert_range.csv  graph_update_RegEff-C_delete.csv  (+1 more)
tests/synth_tests/: CMakeLists.txt  clean.py  setup.py  synth_init.cu  synth_workgeneration.cu  test_registers.cu  test_registers.py  test_synth_init.py  test_synth_workload.py
tests/synth_tests/results/: init_CUDA_8.csv  init_Halloc_8.csv  init_Ouroboros-C-S_8.csv  init_Ouroboros-C-VA_8.csv  init_Ouroboros-C-VL_8.csv  init_Ouroboros-P-S_8.csv  init_Ouroboros-P-VA_8.csv  init_Ouroboros-P-VL_8.csv  init_RegEff-AW_8.csv  init_RegEff-A_8.csv  init_RegEff-CFM_8.csv  init_RegEff-CF_8.csv  init_RegEff-CM_8.csv  init_RegEff-C_8.csv  init_ScatterAlloc_8.csv  init_XMalloc_8.csv  reg_Ouroboros-C-S.csv  reg_Ouroboros-C-VA.csv  reg_Ouroboros-C-VL.csv  reg_Ouroboros-P-S.csv  reg_Ouroboros-P-VA.csv  reg_Ouroboros-P-VL.csv  reg_RegEff-AW.csv  reg_RegEff-CFM.csv  reg_XMalloc.csv  synth_Baseline_1-1048576_4-4096.csv  synth_Baseline_1-1048576_4-64.csv  synth_CUDA_1-1048576_4-4096.csv  synth_CUDA_1-1048576_4-64.csv  synth_Ouroboros-C-S_1-1048576_4-4096.csv  synth_Ouroboros-C-S_1-1048576_4-64.csv  synth_Ouroboros-C-VA_1-1048576_4-64.csv  synth_Ouroboros-C-VL_1-1048576_4-64.csv  synth_Ouroboros-P-S_1-1048576_4-64.csv  synth_Ouroboros-P-VA_1-1048576_4-4096.csv  synth_Ouroboros-P-VA_1-1048576_4-64.csv  synth_Ouroboros-P-VL_1-1048576_4-4096.csv  synth_Ouroboros-P-VL_1-1048576_4-64.csv  synth_RegEff-AW_1-1048576_4-4096.csv  synth_RegEff-CFM_1-1048576_4-4096.csv  (+95 more)
(+1700 files in other folders)
